[project]
name = "odoo-addons-oca-storage"
version = "17.0.20240324.1"
dependencies = [
    "odoo-addon-fs_attachment>=17.0dev,<17.1dev",
    "odoo-addon-fs_storage>=17.0dev,<17.1dev",
    "odoo-addon-image_tag>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
